--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "build": "next build ",
     "start": "next start",
     "lint": "next lint",
-    
     "deploy": "next build && next export && npx gh-pages -d out"
-
   },
   "dependencies": {
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
