--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      packages: write
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
