--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -13,6 +13,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
+      pages: write
       id-token: write
     steps:
       - name: Checkout
