--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
